--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+
+    <img src="https://media.giphy.com/media/RdsfPEVfoNUIw/giphy.gif" alt="walking dog">
     
 </body>
 </html>
